# ze-backend-challenge

./: .env.dev  .gitignore  Dockerfile  LICENSE  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
zedelivery/: asgi.py  settings.py  urls.py  wsgi.py
