[tool.poetry]
name = "ze-backend-challenge"
version = "0.1.0"
description = ""
authors = ["João Prado <joaopedro0128@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
debugpy = "^1.6.3"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
